@@ -1,5 +1,12 @@
 2008-05-24  Bastien Nocera  <hadess@hadess.net>
 
+	* src/totem-playlist.c (init_treeview):
+	* src/totem-playlist.h:
+	* src/totem.c (on_playlist_change_name): Remove dead-code dating
+	back from the audio CD support times
+
+2008-05-24  Bastien Nocera  <hadess@hadess.net>
+
 	* src/backend/bacon-video-widget-gst-0.10.c
 	(bacon_video_widget_open_with_subtitle): Check for the giosrc
 	properly
